--- a/VWAP ML Model Assignment5.ipynb
+++ b/VWAP ML Model Assignment5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcjuMJJSuWqvbeJ52mb8Om",
+      "authorship_tag": "ABX9TyP0JHiymr3zo3feY94iy18V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8awtJ_bnqsrh",
-        "outputId": "5cf9f7fd-ff88-4f18-da0d-d17bfd4e2a7d"
+        "outputId": "e2dee678-7924-4145-a18d-942051f1db89"
       },
-      "execution_count": 36,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 14
         }
       ]
     },
@@ -160,7 +160,7 @@
         "id": "Ev5NR05Rs_7P",
         "outputId": "ad81eb62-ffd6-485e-bc69-a228460b3eb6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "H3zB47JctcMN",
         "outputId": "aa7db861-a31d-4dc5-94f5-2912f57d0556"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "id": "NroMfStRZBCy",
         "outputId": "af87a8d6-75cf-409a-a286-6fa8c1dca665"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -549,7 +549,7 @@
         "id": "x1ZhpLDPBOSj",
         "outputId": "bd89941d-3b0c-448f-a73e-5ce13797da68"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
       "metadata": {
         "id": "aT79i9j8obtO"
       },
-      "execution_count": 37,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
         "id": "91gonSp37kdP",
         "outputId": "579cb434-ffa2-4f0b-eb2a-827639c4dfd1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,8 +1242,8 @@
     {
       "cell_type": "code",
       "source": [
-        "y_test.dropna() # Drop nan records\n",
-        "y_test.fillna(\"EMPTY\")\n",
+        "# y_test.dropna() # Drop nan records\n",
+        "# y_test.fillna(\"EMPTY\")\n",
         "print(\"on Y Train\")\n",
         "print (\"Y train dimensions\", y_train.shape)\n",
         "display(y_train.head())\n",
@@ -1258,9 +1258,9 @@
           "height": 466
         },
         "id": "9v3v6vL3AL7l",
-        "outputId": "b389ea7b-6ccc-436f-8fd3-6644539cab8f"
+        "outputId": "9b3b3814-a8a5-4b3d-ffcf-61ee493c04ae"
       },
-      "execution_count": 38,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1283,7 +1283,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-34fdca98-7c07-403a-aacc-40a00cb554a5\">\n",
+              "  <div id=\"df-34a6e471-a14c-4255-a7f1-19d524c60926\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1330,7 +1330,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34fdca98-7c07-403a-aacc-40a00cb554a5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34a6e471-a14c-4255-a7f1-19d524c60926')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1381,12 +1381,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-34fdca98-7c07-403a-aacc-40a00cb554a5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-34a6e471-a14c-4255-a7f1-19d524c60926 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-34fdca98-7c07-403a-aacc-40a00cb554a5');\n",
+              "          const element = document.querySelector('#df-34a6e471-a14c-4255-a7f1-19d524c60926');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1431,7 +1431,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1d17f550-b73b-4000-a639-14bb24aeacfd\">\n",
+              "  <div id=\"df-33f63a14-4ff7-4a40-a412-4c7c92aad582\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1478,7 +1478,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d17f550-b73b-4000-a639-14bb24aeacfd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33f63a14-4ff7-4a40-a412-4c7c92aad582')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1529,12 +1529,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1d17f550-b73b-4000-a639-14bb24aeacfd button.colab-df-convert');\n",
+              "          document.querySelector('#df-33f63a14-4ff7-4a40-a412-4c7c92aad582 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1d17f550-b73b-4000-a639-14bb24aeacfd');\n",
+              "          const element = document.querySelector('#df-33f63a14-4ff7-4a40-a412-4c7c92aad582');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1576,6 +1576,44 @@
       ],
       "metadata": {
         "id": "W2PCY93Bwmxh"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Encode the target as well since it's categorical - we can also transform the target column using pandas\n",
+        "# OneHotEncoder() for categorical feature \n",
+        "le = LabelEncoder()\n",
+        "\n",
+        "ticker_le = le.fit_transform(X_train['Ticker'])\n",
+        "ticker_le_df = pd.DataFrame(ticker_le, columns=[\"LabelEncoder\"])\n",
+        "X_train_transformed = pd.concat([X_train, ticker_le_df], axis=1)\n",
+        "X_train_transformed= X_train_transformed.dropna(inplace=True,how='all',axis=1)\n",
+        "X_train_transformed\n"
+      ],
+      "metadata": {
+        "id": "LgXhIu3HJ2sP"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Encode the target as well since it's categorical - we can also transform the target column using pandas\n",
+        "# OneHotEncoder() for categorical feature \n",
+        "le = LabelEncoder()\n",
+        "\n",
+        "ticker_le = le.fit_transform(X_test['Ticker'])\n",
+        "ticker_le_df = pd.DataFrame(ticker_le, columns=[\"LabelEncoder\"])\n",
+        "X_test_transformed = pd.concat([X_test, ticker_le_df], axis=1)\n",
+        "X_test_transformed= X_test_transformed.dropna(inplace=True,how='all',axis=1)\n",
+        "X_test_transformed"
+      ],
+      "metadata": {
+        "id": "gc5hXmqVR6hn"
       },
       "execution_count": 39,
       "outputs": []
@@ -1630,7 +1668,7 @@
       "metadata": {
         "id": "BlH4tEooxbT1"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1648,7 +1686,7 @@
       "metadata": {
         "id": "MqYmOzaexgJy"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1669,7 +1707,7 @@
         "id": "vAgaXSRdzzss",
         "outputId": "3ccfca64-89c7-4a40-8c40-c3058a8e335e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1755,7 +1793,7 @@
       "metadata": {
         "id": "Dolfj5lJ1P7E"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1770,7 +1808,7 @@
         "id": "5pXYWUhT1a3U",
         "outputId": "52621879-82e1-4292-9947-6fc310adb94b"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1798,7 +1836,7 @@
         "id": "aHrA58-S1oTi",
         "outputId": "1a385a51-9406-46b0-a2a3-1e089a24fcbc"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,7 +1896,7 @@
         "id": "FKGAO3TOeKlL",
         "outputId": "1e7ac371-8869-483a-db59-dcd23d654c5b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1892,7 +1930,7 @@
         "id": "CwMrxErCeS8P",
         "outputId": "8f2d59c2-f09d-4526-aeef-208bb910a38b"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2507,7 +2545,7 @@
         "id": "ckjdlz5NecsK",
         "outputId": "748130f0-9f38-4d23-f626-341a989a5faa"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2549,7 +2587,7 @@
         "id": "HZXFPsajeo95",
         "outputId": "e0ce8fef-d8f0-40e0-ba6b-071a79ce9197"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2576,7 +2614,7 @@
         "id": "HdoxDtIce0R3",
         "outputId": "3dc780c3-914e-470a-a91a-5502c8ddc7f8"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2611,7 +2649,7 @@
         "id": "58IERfl2e7vx",
         "outputId": "c6877019-d242-453f-fb62-2f23133cf0cd"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2667,7 +2705,7 @@
         "id": "H-1gr7MwfVnl",
         "outputId": "d276e537-e038-464e-f9dd-2a4f53bbb4c8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2722,7 +2760,7 @@
           "height": 487
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3184,7 +3222,7 @@
         "id": "oDp5UC3aijUG",
         "outputId": "9941b0f2-8a7c-4aa9-cb1b-034db1ccdbb8"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3660,7 +3698,7 @@
         "id": "VqTyxZaCDBT3",
         "outputId": "311cf82c-c5c6-432c-eda9-6f7344716210"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
