--- a/VWAP ML Model Assignment6.ipynb
+++ b/VWAP ML Model Assignment6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ5KgJ7yjIgOKvtR/SfR97",
+      "authorship_tag": "ABX9TyNVl3KxsFV3AB3XJVaTuPlN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3950,8 +3950,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Conclusion:\n",
-        "Results for the models\n",
+        "\n",
+        "Gridsearch Results for the models (Assignment 5)\n",
         " \n",
         "\n",
         "*   LogisticRegression:\n",
@@ -3974,12 +3974,42 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "QDGIQ4Adl-Iw"
+        "id": "SfLHbJ7hp_Cp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assignment 5  Conclusion:\n",
+        "By using GridSearchCV WITH optimal hyper parameters improved model accuracy for\n",
+        "- LogisticRegression to 58% from 56%\n",
+        "- Random Forest accuracy reduced to 72% which was not expected, Further parameter tuning is required to determine cause"
+      ],
+      "metadata": {
+        "id": "HPvRlL3AqlbN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# machine learning libs\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.pipeline import Pipeline \n",
+        "from sklearn.compose import ColumnTransformer, make_column_selector\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.preprocessing import OneHotEncoder, LabelEncoder,LabelBinarizer, StandardScaler\n",
+        "from sklearn import config_context\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay"
+      ],
+      "metadata": {
+        "id": "9-ROmBWHk4JL"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -3994,11 +4024,11 @@
         "fx_trade_df.head().values"
       ],
       "metadata": {
-        "id": "h75F3ICugoka",
-        "outputId": "7754d9d4-4f34-49d7-d476-0f256cf5dc04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h75F3ICugoka",
+        "outputId": "7754d9d4-4f34-49d7-d476-0f256cf5dc04"
       },
       "execution_count": 5,
       "outputs": [
@@ -4047,11 +4077,11 @@
         "print(fx_trade_df)\n"
       ],
       "metadata": {
-        "id": "8T6FsuOJZpgD",
-        "outputId": "a585c417-5273-43ef-a8f0-78d6f19dc031",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8T6FsuOJZpgD",
+        "outputId": "a585c417-5273-43ef-a8f0-78d6f19dc031"
       },
       "execution_count": 7,
       "outputs": [
@@ -4104,6 +4134,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Unit Test Validation:\n",
+        "- consolidated key represents combination of  of Ticker, BusinessDate and TimeBucket Key values. Unit Testing will entails comparision of Key against individual fields in the key"
+      ],
+      "metadata": {
+        "id": "HkBBxfR-r6pU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Feature Engineering\n",
@@ -4114,11 +4154,11 @@
         "print(fx_trade_df)"
       ],
       "metadata": {
-        "id": "Z6gcN9ufaZmc",
-        "outputId": "1d12b787-4d3f-4c79-8509-76f8b83b487c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z6gcN9ufaZmc",
+        "outputId": "1d12b787-4d3f-4c79-8509-76f8b83b487c"
       },
       "execution_count": 10,
       "outputs": [
@@ -4172,6 +4212,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Unit Test Validation:\n",
+        "- DirectionFlag represents comparision of TradePrice against VWAP price. Unit Test entails validation of computation and ideally DirectionFlag should match Trend values"
+      ],
+      "metadata": {
+        "id": "xIZTW8CYstNd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Train Test Split\n",
@@ -4187,26 +4237,6 @@
         "id": "CPIUJiuAhVUu"
       },
       "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# machine learning libs\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.pipeline import Pipeline \n",
-        "from sklearn.compose import ColumnTransformer, make_column_selector\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.preprocessing import OneHotEncoder, LabelEncoder,LabelBinarizer, StandardScaler\n",
-        "from sklearn import config_context\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay"
-      ],
-      "metadata": {
-        "id": "9-ROmBWHk4JL"
-      },
-      "execution_count": 16,
       "outputs": []
     },
     {
@@ -4228,11 +4258,11 @@
         "print (X_train.head())\n"
       ],
       "metadata": {
-        "id": "SB5bD-ALknVU",
-        "outputId": "7177c718-8caf-4be5-b8f6-d228ed5067da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SB5bD-ALknVU",
+        "outputId": "7177c718-8caf-4be5-b8f6-d228ed5067da"
       },
       "execution_count": 17,
       "outputs": [
@@ -4322,11 +4352,11 @@
         "print('Test accuracy: %.3f' % clfLR.score(X_test, y_test))"
       ],
       "metadata": {
-        "id": "SFGXcTa-aWw3",
-        "outputId": "d25f6b1b-c4c8-4801-f650-63dca5de4d4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SFGXcTa-aWw3",
+        "outputId": "d25f6b1b-c4c8-4801-f650-63dca5de4d4e"
       },
       "execution_count": 18,
       "outputs": [
@@ -4534,11 +4564,11 @@
         "print('Test accuracy: %.3f' % clfRFC.score(X_test, y_test))"
       ],
       "metadata": {
-        "id": "5j7wP1irmh00",
-        "outputId": "0b922dea-327b-46b2-dbf7-702641d87b5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5j7wP1irmh00",
+        "outputId": "0b922dea-327b-46b2-dbf7-702641d87b5c"
       },
       "execution_count": 19,
       "outputs": [
@@ -4876,12 +4906,25 @@
         "Model Parameter: {'randomforestclassifier__max_depth': 2, 'randomforestclassifier__max_features': 4}\n",
         "Test accuracy: 1.000\n",
         "\n",
-        "\n",
-        "By adding additional features improved model accuracy to 100% both for LogisticRegression and \n",
-        "Random Forest as expected"
+        "\n"
       ],
       "metadata": {
         "id": "OhpBM-qKmKiz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusion:\n",
+        "By adding additional features, we were able to improve model accuracy to 100% for both  LogisticRegression and \n",
+        "Random Forest  over GridSearchCV results of Assignment 5\n",
+        "\n",
+        "\n",
+        "- LogisticRegression accuracy increased to 100% from 58%\n",
+        "- Random Forest accuracy accuracy increased  to 100% from 72% "
+      ],
+      "metadata": {
+        "id": "hgihdtCaovTG"
       }
     }
   ]
